PostGIS 2.4.0
2017/xx/xx

 * New Features *

  - #3661, Mapbox vector tile output support via ST_AsMVT (Björn Harrtell / CartoDB)

PostGIS 2.3.0
2016/09/26

 * Important / Breaking Changes *

  - #3466, Casting from box3d to geometry now returns a 3D
           geometry (Julien Rouhaud of Dalibo)

  - #3604, pgcommon/Makefile.in orders CFLAGS incorrectly leading to
           wrong liblwgeom.h (Greg Troxel)

  - #3396, ST_EstimatedExtent, throw WARNING instead of ERROR
           (Regina Obe)

 * Deprecated signatures *

 * New Features *

  - Add support for custom TOC in postgis_restore.pl
    (Christoph Moench-Tegeder)
  - Add support for negative indexing in ST_PointN and ST_SetPoint
    (Rémi Cura)
  - Add parameters for geography ST_Buffer (Thomas Bonfort)
  - TopoGeom_addElement, TopoGeom_remElement (Sandro Santilli)
  - populate_topology_layer (Sandro Santilli)
  - #454,  ST_WrapX and lwgeom_wrapx (Sandro Santilli)
  - #1758, ST_Normalize (Sandro Santilli)
  - #2236, shp2pgsql -d now emits "DROP TABLE IF EXISTS"
  - #2259, ST_VoronoiPolygons and ST_VoronoiLines (Dan Baston)
  - #2841 and #2996, ST_MinimumBoundingRadius and new ST_MinimumBoundingCircle
           implementation using Welzl's algorithm (Dan Baston)
  - #2991, Enable ST_Transform to use PROJ.4 text (Mike Toews)
  - #3059, Allow passing per-dimension parameters in ST_Expand (Dan Baston)
  - #3339, ST_GeneratePoints (Paul Ramsey)
  - #3362, ST_ClusterDBSCAN (Dan Baston)
  - #3364, ST_GeometricMedian (Dan Baston)
  - #3391, Add table inheritance support in ST_EstimatedExtent
           (Alessandro Pasotti)
  - #3424, ST_MinimumClearance (Dan Baston)
  - #3428, ST_Points (Dan Baston)
  - #3465, ST_ClusterKMeans (Paul Ramsey)
  - #3469, ST_MakeLine with MULTIPOINTs (Paul Norman)
  - #3549, Support PgSQL 9.6 parallel query mode, as far as possible
           (Paul Ramsey, Regina Obe)
  - #3557, Geometry function costs based on query stats (Paul Norman)